force-app/main/default/objects/HL_Subscription__c/HL_Subscription__c.object-meta.xml
<CustomObject>
    <label>HL Subscription</label>
    <nameField>
        <displayFormat>SUB{00000}</displayFormat>
        <label>HL Subscription Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HL Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>