force-app/main/default/objects/HL_Subscription__c/fields/Attach_Excel__c.field-meta.xml
<CustomField>
    <fullName>Attach_Excel__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates to attach the report as Excel</description>
    <inlineHelpText>Indicates to attach the report as Excel</inlineHelpText>
    <label>Attach Excel</label>
    <type>Checkbox</type>
</CustomField>