force-app/main/default/objects/HL_Subscription__c/fields/Attach_PDF__c.field-meta.xml
<CustomField>
    <fullName>Attach_PDF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates to attach the report as PDF</description>
    <inlineHelpText>Indicates to attach the report as PDF</inlineHelpText>
    <label>Attach PDF</label>
    <type>Checkbox</type>
</CustomField>