force-app/main/default/objects/HL_Subscription__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>Allows us to add in notes regarding the nuances of the Subscription. Like some subscription would utilize override, etc.</description>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>