force-app/main/default/objects/HL_Subscription__c/fields/Custom_Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Custom_Sort_Order__c</fullName>
    <description>Optionally the field names can be specified for sorting.</description>
    <inlineHelpText>Optionally the field names can be specified for sorting.</inlineHelpText>
    <label>Custom Sort Order</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Industry</fullName>
            </value>
            <value>
                <fullName>Job Type</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Ownership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>