force-app/main/default/objects/HL_Subscription__c/fields/Distribution_List__c.field-meta.xml
<CustomField>
    <fullName>Distribution_List__c</fullName>
    <description>This is name of the HL subscription. This has been replaced by Subscription Distribution List. Subscription Distribution List should be used, instead.</description>
    <inlineHelpText>This is name of the HL subscription. This has been replaced by Subscription Distribution List. Subscription Distribution List should be used, instead.</inlineHelpText>
    <label>Distribution List</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A/R 60 Days</fullName>
            </value>
            <value>
                <fullName>Activity Notification</fullName>
            </value>
            <value>
                <fullName>ASC Banker Dashboard</fullName>
            </value>
            <value>
                <fullName>ASC Friday BiWeekly Coverage Notification</fullName>
            </value>
            <value>
                <fullName>ASC Friday BiWeekly Coverage Notification by Sector</fullName>
            </value>
            <value>
                <fullName>ASC Friday Weekly Coverage Notification</fullName>
            </value>
            <value>
                <fullName>ASC Friday Weekly Coverage Notification by Sector</fullName>
            </value>
            <value>
                <fullName>ASC Group Head Dashboard</fullName>
            </value>
            <value>
                <fullName>ASC Monday BiWeekly Coverage Notification</fullName>
            </value>
            <value>
                <fullName>ASC Monday BiWeekly Coverage Notification by Sector</fullName>
            </value>
            <value>
                <fullName>ASC Monthly Coverage Notification</fullName>
            </value>
            <value>
                <fullName>ASC Monthly Coverage Notification CC</fullName>
            </value>
            <value>
                <fullName>ASC Monthly Opportunity Planning Notification</fullName>
            </value>
            <value>
                <fullName>ASC Monthly Opportunity Planning Notification CC</fullName>
            </value>
            <value>
                <fullName>ASC Tuesday BiWeekly Coverage Notification</fullName>
            </value>
            <value>
                <fullName>ASC Tuesday BiWeekly Coverage Notification by Sector</fullName>
            </value>
            <value>
                <fullName>ASC Tuesday Weekly Coverage Notification</fullName>
            </value>
            <value>
                <fullName>ASC Tuesday Weekly Coverage Notification by Sector</fullName>
            </value>
            <value>
                <fullName>ASC Weekly Coverage Notification</fullName>
            </value>
            <value>
                <fullName>ASC Weekly Coverage Notification by Sector</fullName>
            </value>
            <value>
                <fullName>ASC Weekly Coverage Notification CC</fullName>
            </value>
            <value>
                <fullName>ASC Weekly Industry Group Head</fullName>
            </value>
            <value>
                <fullName>ASC Weekly Notification By Sector</fullName>
            </value>
            <value>
                <fullName>ASC Weekly Sponsor Activity Notification</fullName>
            </value>
            <value>
                <fullName>ASC Weekly Sponsor Activity Notification CC</fullName>
            </value>
            <value>
                <fullName>CA Exception Report</fullName>
            </value>
            <value>
                <fullName>CF Closed Engagement Notification</fullName>
            </value>
            <value>
                <fullName>CF Closed Engagements</fullName>
            </value>
            <value>
                <fullName>CF Earnout</fullName>
            </value>
            <value>
                <fullName>CF Engagement Closed Notification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>