force-app/main/default/objects/HL_Subscription__c/fields/HL_Report_Link__c.field-meta.xml
<CustomField>
    <fullName>HL_Report_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Report to Link this Record To for Security Assignments</description>
    <inlineHelpText>Report to Link this Record To for Security Assignments</inlineHelpText>
    <label>HL Report Link</label>
    <referenceTo>HL_Report_Link__c</referenceTo>
    <relationshipLabel>HL Subscriptions</relationshipLabel>
    <relationshipName>HL_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>