force-app/main/default/objects/HL_Subscription__c/fields/Home_Page_Access__c.field-meta.xml
<CustomField>
    <fullName>Home_Page_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to add/remove images within the home page component.  If true and the related report link has a thumbnail URL, then this report will appear in the component.</description>
    <label>Home Page Access</label>
    <type>Checkbox</type>
</CustomField>