force-app/main/default/objects/HL_Subscription__c/fields/Industry_Group__c.field-meta.xml
<CustomField>
    <fullName>Industry_Group__c</fullName>
    <description>This is the industry group reporting on Opportunity/Engagement or Account or Contact.</description>
    <inlineHelpText>This is the industry group reporting on Opportunity/Engagement or Account or Contact.</inlineHelpText>
    <label>Industry Group</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADG</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>BUS</fullName>
            </value>
            <value>
                <fullName>CFR</fullName>
            </value>
            <value>
                <fullName>CM</fullName>
            </value>
            <value>
                <fullName>CMG</fullName>
            </value>
            <value>
                <fullName>CORP</fullName>
            </value>
            <value>
                <fullName>DDS</fullName>
            </value>
            <value>
                <fullName>Dist</fullName>
            </value>
            <value>
                <fullName>Eur</fullName>
            </value>
            <value>
                <fullName>FIG</fullName>
            </value>
            <value>
                <fullName>FRG</fullName>
            </value>
            <value>
                <fullName>FS</fullName>
            </value>
            <value>
                <fullName>FVA</fullName>
            </value>
            <value>
                <fullName>GEN</fullName>
            </value>
            <value>
                <fullName>HC</fullName>
            </value>
            <value>
                <fullName>IFA</fullName>
            </value>
            <value>
                <fullName>IG</fullName>
            </value>
            <value>
                <fullName>M&amp;A</fullName>
            </value>
            <value>
                <fullName>O&amp;G</fullName>
            </value>
            <value>
                <fullName>OTHER</fullName>
            </value>
            <value>
                <fullName>POW</fullName>
            </value>
            <value>
                <fullName>RE</fullName>
            </value>
            <value>
                <fullName>SOV</fullName>
            </value>
            <value>
                <fullName>TAG</fullName>
            </value>
            <value>
                <fullName>TECH</fullName>
            </value>
            <value>
                <fullName>TRANS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>