force-app/main/default/objects/HL_Subscription__c/fields/Industry_Umbrella__c.field-meta.xml
<CustomField>
    <fullName>Industry_Umbrella__c</fullName>
    <description>This is the industry umbrella reporting on Opportunity/Engagement or Account or Contact.</description>
    <formula>IF (INCLUDES(Industry_Group__c,&apos;ADG&apos;) || INCLUDES(Industry_Group__c,&apos;BUS&apos;) || INCLUDES(Industry_Group__c,&apos;TRANS&apos;),&apos;BUS - The Services Group&apos;, 
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the industry umbrella reporting on Opportunity/Engagement or Account or Contact.</inlineHelpText>
    <label>Industry Umbrella</label>
    <type>Text</type>
</CustomField>