force-app/main/default/objects/HL_Subscription__c/fields/Is_Tableau__c.field-meta.xml
<CustomField>
    <fullName>Is_Tableau__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to allow the related report to appear or not appear in the VF Web Tab for Tableau.  If true and the Report Link record has a Tableau URL, then the Display Name of the Report will appear in the drop down. to be selected and loaded.</description>
    <label>Is Tableau</label>
    <type>Checkbox</type>
</CustomField>