force-app/main/default/objects/HL_Subscription__c/fields/Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Business__c</fullName>
    <description>This is the line of business for Opportunity or Engagement.</description>
    <inlineHelpText>This is the line of business for Opportunity or Engagement.</inlineHelpText>
    <label>Service</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>CF</fullName>
            </value>
            <value>
                <fullName>CORP</fullName>
            </value>
            <value>
                <fullName>FVA</fullName>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>FS</fullName>
            </value>
            <value>
                <fullName>SC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>