force-app/main/default/objects/HL_Subscription__c/fields/Membership_Driven_Filter__c.field-meta.xml
<CustomField>
    <fullName>Membership_Driven_Filter__c</fullName>
    <description>Indicates if the data will be filtered based on the subscriber&apos;s membership, such as internal team or coverage team.</description>
    <inlineHelpText>Indicates if the data will be filtered based on the subscriber&apos;s membership, such as internal team or coverage team.</inlineHelpText>
    <label>Membership Driven Filter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coverage Team</fullName>
            </value>
            <value>
                <fullName>Internal Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>