force-app/main/default/objects/HL_Subscription__c/fields/Ownership__c.field-meta.xml
<CustomField>
    <fullName>Ownership__c</fullName>
    <description>This is the ownership on Opportunity/Engagement or Account.</description>
    <inlineHelpText>This is the ownership on Opportunity/Engagement or Account.</inlineHelpText>
    <label>Ownership</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ESOP</fullName>
            </value>
            <value>
                <fullName>Family</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Hedge Fund</fullName>
            </value>
            <value>
                <fullName>Institutional Debt Holder</fullName>
            </value>
            <value>
                <fullName>Management</fullName>
            </value>
            <value>
                <fullName>Not for Profit</fullName>
            </value>
            <value>
                <fullName>Pension Plan</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Private Equity Group</fullName>
            </value>
            <value>
                <fullName>Public Debt</fullName>
            </value>
            <value>
                <fullName>Public Equity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>