force-app/main/default/objects/HL_Subscription__c/fields/Product_Speciality__c.field-meta.xml
<CustomField>
    <fullName>Product_Speciality__c</fullName>
    <description>This is the staff product specialty.</description>
    <inlineHelpText>This is the staff product specialty.</inlineHelpText>
    <label>Staff Product Speciality</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Dispute Resolution</fullName>
            </value>
            <value>
                <fullName>Generalist/REVS</fullName>
            </value>
            <value>
                <fullName>GEN - General</fullName>
            </value>
            <value>
                <fullName>Portfolio Valuation</fullName>
            </value>
            <value>
                <fullName>Tax &amp; Financial Reporting</fullName>
            </value>
            <value>
                <fullName>Transaction Advisory Services</fullName>
            </value>
            <value>
                <fullName>Transaction Opinions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>