force-app/main/default/objects/HL_Subscription__c/fields/Reply_To__c.field-meta.xml
<CustomField>
    <fullName>Reply_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the reply to for the email. This will override the reply to on the distribution list.</description>
    <inlineHelpText>This is the reply to for the email. This will override the reply to on the distribution list.</inlineHelpText>
    <label>Reply To</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>HL Employees/Distribution Lists only.</errorMessage>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Houlihan_Employee</value>
        </filterItems>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Distribution_Lists</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>HL Subscriptions (Reply To)</relationshipLabel>
    <relationshipName>Subscriptions2</relationshipName>
    <type>Lookup</type>
</CustomField>