force-app/main/default/objects/HL_Subscription__c/fields/ReportAssignmentKey__c.field-meta.xml
<CustomField>
    <fullName>ReportAssignmentKey__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>This is the concatenation of the user id and the report link id.</description>
    <inlineHelpText>This is the concatenation of the user id and the report link id.</inlineHelpText>
    <label>ReportAssignmentKey</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>