force-app/main/default/objects/HL_Subscription__c/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <description>Industry sector</description>
    <inlineHelpText>Industry sector</inlineHelpText>
    <label>Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Education &amp; Training</fullName>
            </value>
            <value>
                <fullName>Engineering &amp; Construction</fullName>
            </value>
            <value>
                <fullName>Transportation &amp; Logistics</fullName>
            </value>
            <value>
                <fullName>AM - Allocator</fullName>
                <isActive>false</isActive>
                <label>AM - Allocator</label>
            </value>
            <value>
                <fullName>AM - Alternatives</fullName>
                <isActive>false</isActive>
                <label>AM - Alternatives</label>
            </value>
            <value>
                <fullName>AM - Other</fullName>
                <isActive>false</isActive>
                <label>AM - Other</label>
            </value>
            <value>
                <fullName>AM - Traditional</fullName>
                <isActive>false</isActive>
                <label>AM - Traditional</label>
            </value>
            <value>
                <fullName>Aerospace</fullName>
                <isActive>false</isActive>
                <label>Aerospace</label>
            </value>
            <value>
                <fullName>Automotive &amp; Transportation</fullName>
                <isActive>false</isActive>
                <label>Automotive &amp; Transportation</label>
            </value>
            <value>
                <fullName>Autonomous Systems</fullName>
                <isActive>false</isActive>
                <label>Autonomous Systems</label>
            </value>
            <value>
                <fullName>Auxiliary</fullName>
                <isActive>false</isActive>
                <label>Auxiliary</label>
            </value>
            <value>
                <fullName>BPO</fullName>
                <isActive>false</isActive>
                <label>BPO</label>
            </value>
            <value>
                <fullName>Bank / Broker-Dealer</fullName>
                <isActive>false</isActive>
                <label>Bank / Broker-Dealer</label>
            </value>
            <value>
                <fullName>Broadcast Technology/Media Services</fullName>
                <isActive>false</isActive>
                <label>Broadcast Technology/Media Services</label>
            </value>
            <value>
                <fullName>Building Products</fullName>
                <isActive>false</isActive>
                <label>Building Products</label>
            </value>
            <value>
                <fullName>Business Process Outsourcing (BPO)</fullName>
                <isActive>false</isActive>
                <label>Business Process Outsourcing (BPO)</label>
            </value>
            <value>
                <fullName>CBD</fullName>
                <isActive>false</isActive>
                <label>CBD</label>
            </value>
            <value>
                <fullName>CRM/Marketing Automation/VOC</fullName>
                <isActive>false</isActive>
                <label>CRM/Marketing Automation/VOC</label>
            </value>
            <value>
                <fullName>Canadian LP</fullName>
                <isActive>false</isActive>
                <label>Canadian LP</label>
            </value>
            <value>
                <fullName>Capital Goods</fullName>
                <isActive>false</isActive>
                <label>Capital Goods</label>
            </value>
            <value>
                <fullName>Chemicals</fullName>
                <isActive>false</isActive>
                <label>Chemicals</label>
            </value>
            <value>
                <fullName>Cloud Communications &amp; Collaborations</fullName>
                <isActive>false</isActive>
                <label>Cloud Communications &amp; Collaborations</label>
            </value>
            <value>
                <fullName>Cloud Services / Infrastructure</fullName>
                <isActive>false</isActive>
                <label>Cloud Services / Infrastructure</label>
            </value>
            <value>
                <fullName>Commercial Financial Co.</fullName>
                <isActive>false</isActive>
                <label>Commercial Financial Co.</label>
            </value>
            <value>
                <fullName>Communications &amp; Collaboration Software</fullName>
                <isActive>false</isActive>
                <label>Communications &amp; Collaboration Software</label>
            </value>
            <value>
                <fullName>Consumer Internet Services/e-Commerce</fullName>
                <isActive>false</isActive>
                <label>Consumer Internet Services/e-Commerce</label>
            </value>
            <value>
                <fullName>Content Management/Enterprise Workflow</fullName>
                <isActive>false</isActive>
                <label>Content Management/Enterprise Workflow</label>
            </value>
            <value>
                <fullName>Customer Experience/Engagement Management</fullName>
                <isActive>false</isActive>
                <label>Customer Experience/Engagement Management</label>
            </value>
            <value>
                <fullName>Data Analytics / Business Intelligence</fullName>
                <isActive>false</isActive>
                <label>Data Analytics / Business Intelligence</label>
            </value>
            <value>
                <fullName>Data Centers</fullName>
                <isActive>false</isActive>
                <label>Data Centers</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>