force-app/main/default/objects/HL_Subscription__c/fields/Sender__c.field-meta.xml
<CustomField>
    <fullName>Sender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the sender of the email. This will override the sender on the distribution list.</description>
    <inlineHelpText>This is the sender of the email. This will override the sender on the distribution list.</inlineHelpText>
    <label>Sender</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>HL Employees/Distribution Lists only.</errorMessage>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Houlihan_Employee</value>
        </filterItems>
        <filterItems>
            <field>Contact.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Distribution_Lists</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>HL Subscriptions (Sender)</relationshipLabel>
    <relationshipName>Subscriptions1</relationshipName>
    <type>Lookup</type>
</CustomField>