force-app/main/default/objects/HL_Subscription__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>This field is used to relist the value in the drop down within the VF web tab by priority over alphabetically.</description>
    <label>Sort Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>