force-app/main/default/objects/HL_Subscription__c/fields/Staff_Attr_for_Principal_Manager__c.field-meta.xml
<CustomField>
    <fullName>Staff_Attr_for_Principal_Manager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the staff office and the staff industry is only applied to the principals or the managers only.</description>
    <inlineHelpText>Indicates if the staff office and the staff industry is only applied to the principals or the managers only.</inlineHelpText>
    <label>Staff Attr for Principal Manager</label>
    <type>Checkbox</type>
</CustomField>