force-app/main/default/objects/HL_Subscription__c/fields/Staff_Department__c.field-meta.xml
<CustomField>
    <fullName>Staff_Department__c</fullName>
    <description>This is the staff office.</description>
    <inlineHelpText>This is the staff office.</inlineHelpText>
    <label>Staff Department</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>IC</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>MKTG</fullName>
            </value>
            <value>
                <fullName>HR</fullName>
            </value>
            <value>
                <fullName>HCM</fullName>
            </value>
            <value>
                <fullName>PG</fullName>
            </value>
            <value>
                <fullName>CORP</fullName>
            </value>
            <value>
                <fullName>LEGAL</fullName>
            </value>
            <value>
                <fullName>SC</fullName>
            </value>
            <value>
                <fullName>FVA</fullName>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>SHARED</fullName>
            </value>
            <value>
                <fullName>CF</fullName>
            </value>
            <value>
                <fullName>FSCG</fullName>
            </value>
            <value>
                <fullName>COMP</fullName>
            </value>
            <value>
                <fullName>ACCTG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>